# Singles-Sorter

./: .gitignore  .gitmodules  404.html  CNAME  Gemfile  LICENSE  README.md  RELEASING.md  SONGSORT  Singles-Sorter.spec  _config.yml  delete-tag.bat  identify_similarities.py  index.html  installer.bat  jibrish_to_hebrew.py  pyproject.toml  requirements-apk.txt  requirements.txt  run-repomix-site.bat  ver7.0.txt  מסדר הסינגלים 7.0.bat  מסדר הסינגלים 8.0.bat  ‏‏מסדר הסינגלים 6.18 פרו.bat  ‏‏מסדר הסינגלים 7.1 .bat  ‏‏מסדר הסינגלים 7.1.bat  ‏‏מסדר הסינגלים 7.4.bat  ‏‏מסדר הסינגלים 7.5.bat  ‏‏מסדר הסינגלים 8.1.bat  ‏‏מסדר הסינגלים 8.2.bat  ‏‏‏‏‏‏מסדר הסינגלים 8.9.bat  ‏‏‏‏‏‏מסדר הסינגלים 9.0 בטא.bat  ‏‏‏‏‏‏מסדר הסינגלים 9.1 בטא.bat  ‏‏‏‏‏‏מסדר הסינגלים 9.2 בטא.bat  ‏‏‏‏‏‏‏‏‏‏מסדר הסינגלים 6.8.1.bat  ‏‏‏‏‏‏‏‏‏‏מסדר הסינגלים 9.0.bat  ‏‏‏‏‏‏‏‏‏‏מסדר הסינגלים 9.2.bat  ‏‏‏‏‏‏‏‏‏‏‏‏מסדר הסינגלים 7.0.bat
.github/: FUNDING.yml
_includes/: header.html
_layouts/: default.html
apk-project/: buildozer.spec  main.kv  main.py  singer-list.csv
data/: 1.txt  rev-for.bat  singer-list.csv
docs/: help.html
gui-project/: Work Plan.md  Work Plan.rtl.txt  auto_build.bat  check_name.py  demo1.py  general_configs.py  general_windows.py  gui_demo.py  help.md  main.py  requirements.txt  singer-list.csv  singles_sorter_func.py  singles_sorter_gui.py  singles_sorter_v2.py  singles_sorter_v2_old.py  singles_sorter_v3.py  toolcli1.py  try1.py  try_openlist.py  update.py
inside/: 3 מזהה כפולים.bat  4 מזהה כפולים.bat  5 מזהה כפולים.bat  6 מזהה כפולים.bat  MediaInfo.exe~.bat  compressed-2-txt_self_delete.bat  design_text.bat  singer-list.csv  singer-list.csv~.bat  מסדר הסינגלים מזהה כפולים.bat  עדכונים 2.0.txt  עדכונים 2.2.txt  עזרה אופליין.txt  ‏‏‏‏‏‏מסדר הסינגלים 8.9.1.bat  ‏‏‏‏‏‏מסדר הסינגלים 9.7  (לא תקין)בטא.bat  ‏‏‏‏‏‏‏‏מסדר הסינגלים 8.9.4.bat  ‏‏‏‏‏‏‏‏מסדר הסינגלים 8.9.5.bat  ‏‏‏‏‏‏‏‏מסדר הסינגלים 9.0.1.bat  ‏‏‏‏‏‏‏‏‏‏מסדר הסינגלים 8.9.4 - עבודה עם קובץ אחד.bat  ‏‏‏‏‏‏‏‏‏‏מסדר הסינגלים 8.9.7 - משולב פייתון.bat  ‏‏‏‏‏‏‏‏‏‏מסדר הסינגלים 8.9.8.bat  ‏‏‏‏‏‏‏‏‏‏מסדר הסינגלים 9.1.bat
machine-learn/: .gitignore  1.txt  auto_create_data.py  compar_f1score.py  copy_best_model.bat  copy_singles.py  creat_negative_data.py  create_ner_model.py  create_ner_model_csv.py  create_ner_model_git.py  create_ner_model_git_json.py  create_ner_model_json.py  creating_model_git.py  creating_model_git_2.py  f1score.py  f1score_dataset_v1.json  f1score_dataset_v2.json  filtered_file.csv  find_on_unknow_list.py  find_singer.py  find_singer_names.py  graph.py  iteration_data.json  model_metrics.csv  model_name.txt  models_info.txt  negative_data.csv  singer_names.txt  training_data.csv  try_model.py  גרף.py
pro-func/: pro_func.py
python-project/: Folder_Merger.py  assert_check_name.py  check_name.py  files_names.txt  find_singer_names.py  jibrish_to_hebrew.py  pro_func.py  scan1.py  singer-list.csv  singles_sorter_func.py  singles_sorter_func2.py  singles_sorter_oop.py  ‏‏‏‏pro_func_release2.py
set-8/: singer-list2.csv  מסדר הסינגלים 8.0.bat  מסדר הסינגלים 8.1.bat  מסדר הסינגלים 8.4.bat
site/: Survey.html  data.json  download.html  help.html  ico.html  output.csv  script.js  search.css  search_on_drive.html  shir-bot-search.html  shir-bot.html  side.html  songs.csv  styles.css
source_code/: SinglesSorterC.bat  singer-list.csv  מסדר הסינגלים 12.5.livecode  מסדר הסינגלים 12.8.livecode  ‏‏add_uninstall_list.reg  (+3 more)
tests/: test_cli.py  (+1 more)
(+480 files in other folders)
