[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singlesorter"
version = "14.0.1"
description = "Singles Sorter CLI for organizing music by artist"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "NHLOCAL", email = "nh.local11@gmail.com" }]
keywords = ["music", "organizer", "cli", "sorter"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "music-tag>=0.4.3",
]

[project.optional-dependencies]
ai = [
  "scikit-learn>=1.5.1,<1.6",
  "spacy>=3.7.5,<3.8",
]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.4",
  "ruff>=0.9.0",
  "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/NHLOCAL/Singles-Sorter"
Repository = "https://github.com/NHLOCAL/Singles-Sorter"
Issues = "https://github.com/NHLOCAL/Singles-Sorter/issues"

[project.scripts]
singlesorter = "singlesorter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["singlesorter*"]

[tool.setuptools.package-data]
singlesorter = [
  "data/*.csv",
  "models/version",
  "models/music_entity_clf/*.json",
  "models/music_entity_clf/*.pkl",
  "models/singer_ner_he/*.cfg",
  "models/singer_ner_he/*.json",
  "models/singer_ner_he/tokenizer",
  "models/singer_ner_he/ner/*",
  "models/singer_ner_he/vocab/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
